--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-23  Matthias Clasen  <mclasen@redhat.com>
+
+	* NEWS: Updates
+
 2005-07-21  Christian Rose  <menthos@menthos.com>
 
 	* configure.in: Added "hy" to ALL_LINGUAS.
