--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-24  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Updated Norwegian bokmål translation.
+	* no.po: Same
+
 2005-07-23  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
