--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-24  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.
+	
+
 2005-07-23  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
