--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-25 Ankit Patel <ankit644@yahoo.com>
+
+	* gu.po: Updated Gujarati Translation.
+
 2005-07-25  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
