--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-07-25  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtk.symbols: 
+	* gtk/gtkobject.[hc]: 
+	* gtk/gtkfilechooserdialog.[hc] 
+	* gtk/gtkdialog.[hc]: Remove the G_GNUC_NULL_TERMINATED marker
+	from a number of varargs functions where we allow to omit the
+	varargs completely.  (#311465, Callum McKenzie)
+
 2005-07-22  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.7.4 === 
