--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-25 Matthias Clasen <mclasen@redhat.com>
+
+	* zh_CN.po: fix a format string error
+	discovered by msgfmt -c.
+
 2005-07-25 Ankit Patel <ankit644@yahoo.com>
 
 	* gu.po: Updated Gujarati Translation.
