--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-25 Matthias Clasen <mclasen@redhat.com>
+
+	* Makefile.in.in: Call msgfmt with -c to catch
+	format string errors.
+
 2005-07-25 Ankit Patel <ankit644@yahoo.com>
 
 	* gu.po: Updated Gujarati Translation.
