--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-26  Artur Flinta  <aflinta@cvs.gnome.org>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 2005-07-25 Matthias Clasen <mclasen@redhat.com>
 
 	* Makefile.in.in: Call msgfmt with -c to catch
