--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-26  Owen Taylor  <otaylor@redhat.com>
+
+	* gtk/gtknotebook.c (gtk_notebook_page_allocate): Use
+	>= not > in deciding whether to subtract out x/ythickness.
+	(#308145, Morten Welinder)
+
 2005-07-26  Elijah Newren  <newren@gmail.com>
 
 	Revert part of patch from #166379; don't have gtk_window_present()
