--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-27  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2005-07-27 Ankit Patel <ankit644@yahoo.com>
 
 	* gu.po: Updated Gujarati Translation.
