--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-28  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Updated Albanian translation.
+
 2005-07-26  Hendrik Brandt  <heb@gnome-de.org>
 
 	* de.po: Updated German translation.
