--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-28  Ilkka Tuohela  <hile@iki.fi>
+
+	* fi.po: Bulk change to some Finnish translations.       
+
 2005-07-28  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Updated Albanian translation.
