Updated Finnish translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,10 @@
 2005-07-28  Ilkka Tuohela  <hile@iki.fi>
 
+	* fi.po: Updated Finnish translation (now only
+	         keyboard key names not translated)
+
+2005-07-28  Ilkka Tuohela  <hile@iki.fi>
+
 	* fi.po: Bulk change to some Finnish translations.       
 
 2005-07-28  Laurent Dhima  <laurenti@alblinux.net>
