--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-28  Nikos Charonitakis  <charosn@her.forthnet.gr>
+
+	* el.po: Updated Greek translation.
+
 2005-07-28  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
